# Fire-Flow

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS.md.backup  CLAUDE.md  Cargo.toml  FINAL_IMPLEMENTATION_SUMMARY.md  FIRE-FLOW_PLAN.md  IMPLEMENTATION_SUMMARY.md  KESTRA_INTEGRATION_GUIDE.md  KESTRA_QUICK_REFERENCE.md  MUSK_PRINCIPLES_APPLIED.md  MUTATION_TESTING.md  MUTATION_TESTING_APPROACH.md  MUTATION_TESTING_SETUP.md  Makefile  NEXT_STAGES.md  NEXT_STAGES_FROM_MEM0.md  NEXT_STAGES_SUMMARY.md  OPENCODE_INTEGRATION.md  QUALITY_GATE_PLAN.md  QWEN.md  README.md  SDLC_VIBE_KANBAN_SETUP.md  STARTUP_GUIDE.md  Taskfile.yml  WORKFLOW_SUMMARY.md  application.yml  avito-mutation-demo.go  avito-mutation-demo.sh  calculator.go  calculator_test.go  concurrent-mutation-test.sh  demo-opencode-integration.sh  docker-compose.yml  final-validation.sh  fire-flow  flip_tree.nu  go-mutation-tester.go  go.mod  (+20 more)
.beads/: README.md  completion-summary.jsonl  interactions.jsonl  tcr-enforcer-epic.yaml
.codanna/: .project-id  settings.toml
.github/: copilot-instructions.md
.opencode/: config.json
bitter-truth/: ARCHITECTURE.md  Cargo.toml  JEVONS_PARADOX_ANALYSIS.md  LAWS.md
bitter-truth-rs/: Cargo.toml
bitter-truth-rs/bt-core/: Cargo.toml
bitter-truth-rs/bt-core/src/: lib.rs
bitter-truth-rs/tools/gate1/: Cargo.toml
bitter-truth-rs/tools/gate1/src/: main.rs
bitter-truth-rs/tools/generate/: Cargo.toml
bitter-truth-rs/tools/generate/src/: main.rs
bitter-truth-rs/tools/validate/: Cargo.toml
bitter-truth-rs/tools/validate/src/: main.rs
bitter-truth/contracts/: capitalize.yaml  common.yaml  data-filter.yaml  json-parser.yaml
bitter-truth/contracts/tools/: echo.yaml  gate1.yaml  run-tool.yaml  validate.yaml  wmill-validate.yaml
bitter-truth/crates/bitter-sdk/: Cargo.toml  build.rs
bitter-truth/crates/bitter-sdk/src/: lib.rs
bitter-truth/crates/tools/echo/: Cargo.toml
bitter-truth/crates/tools/echo/src/: main.rs
bitter-truth/kestra/: AWS_WELL_ARCHITECTED_ANALYSIS.md  COMPONENTS.md  MODULAR_ARCHITECTURE.md  TESTABLE_ARCHITECTURE.md
bitter-truth/kestra/config/: defaults.yml
bitter-truth/kestra/flows/: code-generation-with-gates.yml  collect-feedback.yml  contract-loop-modular.yml  contract-loop-testable.yml  contract-loop.yml  echo.yml  execute-tool-testable.yml  execute-tool.yml  generate-tool-testable.yml  generate-tool.yml  validate-tool-testable.yml  validate-tool.yml
bitter-truth/prompts/: rosetta-stone.md
bitter-truth/proto/bitter/: common.proto
bitter-truth/proto/bitter/tools/: echo.proto
bitter-truth/tests/: run_tests.nu  test_edge_cases.nu  test_generate.nu  test_helpers_example.nu  test_integration.nu  test_kestra_workflow.nu  test_kestra_workflow_real.nu  test_llm_cleaner.nu  test_modular_workflows.nu  test_run_tool.nu  test_validate.nu  test_wmill_validate.nu
bitter-truth/tests/edge_cases/: README.md  test_boundary_values.nu  test_filesystem_edge_cases.nu  test_resource_limits.nu  test_special_characters.nu
bitter-truth/tests/fixtures/contracts/: echo-complete.yaml  invalid-schema.yaml  minimal.yaml  missing-server.yaml
bitter-truth/tests/fixtures/inputs/: echo-empty-message.json  echo-empty.json  echo-special-chars.json  echo-valid.json  echo_input.json
bitter-truth/tests/fixtures/outputs/: echo-expected.json
bitter-truth/tests/fixtures/tools/: broken-str-rev.nu  correct-echo.nu  echo-buggy.nu  echo-correct.nu  echo-wrong-schema.nu  malformed-json.nu  missing-field.nu  wrong-type.nu
bitter-truth/tests/helpers/: README.md  USAGE.md  assertions.nu  builders.nu  constants.nu  fixtures.nu  mod.nu
bitter-truth/tests/integration/: README.md  test_contract_compliance.nu  test_generate_execute_validate_chain.nu  test_generate_integration.nu  test_run_execute_integrate.nu
bitter-truth/tests/purity/: README.md  test_determinism.nu  test_idempotency.nu  test_purity.nu  test_reproducibility.nu
bitter-truth/tests/unit/: README.md  test_error_handling.nu  test_exit_codes.nu  test_json_parsing.nu  test_trace_id_propagation.nu
bitter-truth/tests/workflow/: IMPLEMENTATION_SUMMARY.md  INDEX.md  README.md  run-workflow-tests.nu  test_error_recovery.nu  test_full_workflow.nu  test_parallel_executions.nu  test_self_healing_loop.nu
bitter-truth/tools/: echo.nu  gate1.nu  generate.nu  run-tool.nu  test-generate.nu  test-run-tool.nu  validate.nu
docs/: .gitignore  kestra-api.md  kestra-openapi.yaml
fire-flow/: .env.example  README.md  pyproject.toml  worker.py
fire-flow/workflows/: __init__.py  client.py  contract_loop.py
scripts/: add-infrastructure-tags.py  add-tags-to-kanban.py  insert-beads-to-kanban.py  kestra-test.sh  startup.sh  sync-beads-to-kanban-playwright.py  sync-beads-to-kanban-ui.py  sync-beads-to-kanban.py
test_dir/: go.mod  main_test.go
tools/: echo.nu  kestra.nu  (+1 more)
tools/kestra-ws/: Cargo.toml
tools/kestra-ws/src/: lib.rs  main.rs
tools/llm-cleaner/: Cargo.toml
tools/llm-cleaner/src/: main.rs
(+125 files in other folders)
