[workspace]
members = [
    "bitter-truth-rs/bt-core",
    "bitter-truth-rs/tools/generate",
    "bitter-truth-rs/tools/gate1",
    "bitter-truth-rs/tools/validate",
    "tools/llm-cleaner"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json"] }
reqwest = { version = "0.11", features = ["json"] }
yaml-rust = "0.4"

[profile.release]
lto = true
strip = true
