[workspace]
resolver = "2"
members = [
    "crates/bitter-sdk",
    "crates/tools/*",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/yourusername/bitter-truth"

[workspace.dependencies]
# Protobuf
prost = "0.13"
prost-types = "0.13"

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Serialization (for logs)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Build
prost-build = "0.13"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols
panic = "abort"     # Abort on panic (smaller binary)
