[project]
name = "fire-flow"
version = "0.1.0"
description = "Contract-driven AI code generation with Hatchet orchestration"
requires-python = ">=3.11"
dependencies = [
    "hatchet-sdk>=1.21.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["workflows"]
