[package]
name = "llm-cleaner"
version = "0.1.0"
edition = "2021"
description = "Extract valid code/JSON from chatty LLM outputs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }

[profile.release]
lto = true
strip = true
