[package]
name = "llm-cleaner"
version.workspace = true
edition.workspace = true
description = "Extract valid code/JSON from chatty LLM outputs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
