[package]
name = "bitter-sdk"
version.workspace = true
edition.workspace = true
description = "SDK for building bitter-truth tools"
license.workspace = true

[dependencies]
prost.workspace = true
prost-types.workspace = true
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true

[build-dependencies]
prost-build.workspace = true
